reloader-fidget-app/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-reloader
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-reloader
  template:
    metadata:
      labels:
        app: demo-reloader
    spec:
      serviceAccountName: demo-sa
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: configmap-volume
              mountPath: /usr/share/nginx/html/
            - name: nginxconfig-volume
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: configmap-volume
          configMap:
            name: welcomecm
            items:
              - key: "welcome.html"
                path: "welcome.html"
              - key: "welcome.html"
                path: "index.html"
        - name: nginxconfig-volume
          secret:
            secretName: nginx-secret-config
            defaultMode: 0400
            items:
              - key: nginx-custom-config.conf
                path: "default.conf"
