reloader-fidget-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tests-reloader-deploy
  name: tests-reloader-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tests-reloader-deploy
  type: NodePort
status:
  loadBalancer: {}
