reloader-fidget-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: tests-reloader-ingress
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - backend:
          service:
            name: tests-reloader-svc
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
